[2단계 - 자동차 경주 리팩토링] 오션(김동해) 미션 제출합니다 (#556)
* docs: README step2 추가

* refactor: MessageView OutputView 로 통합

* refactor: splitCarName InputView 로 이동

차 이름에 대한 split 은 Cars가 할 필요가 없다고 판단

* test: splitCarName InputView 로 이동에 따른 수정

* feat: Name 도메인 추가

원시값 포장

* refactor: Name 도메인 추가에 따른 수정

* test: Name 도메인 추가에 따른 테스트 수정

* refactor: Name 도메인 추가에 따른 수정

* style: 메소드 이름 변경

checkPositiveNumber -> validPositiveNumber

* refactor: isOnlySpace 수정

* refactor: generateNumber 수정

* refactor: moveByNumber 메소드 수정

moveByRandom->moveByNumber

* refactor: generateNumber 수정에 따른 테스트 수정

* style: numberGenerator 이름 수정

* style: 상수 이름 수정

CAR_NAME_LENGTH -> CAR_MAX_NAME_LENGTH

* refactor: String.join 위치 변경

Cars -> OutputView

* style: 코드 순서 변경

* refactor: Car의 Name 수정

* test: getWinner 수정에 따른 CarsTest 수정

* refactor: 메소드명 변경

* refactor: Random 객체 생성 위치 변경

* refactor: Name 객체 공백 수정

* refactor: getName 리팩토링

* refactor: getter 사용 지양을 위한 수정

* style: 메소드 순서 수정

* test: Name test 추가

* refactor: cars 객체 깊은 복사로 반환 수정

* refactor: Location 원시값 포장

* refactor: 운영체제별로 개행문자 차이에 따른 개행 수정

* refactor: Car 객체에서 Name 생성 수정

* refactor: isOnlySpace 수정